# book-renderer

./: .gitignore  Cargo.toml  README.md  build.sh
src/: data.rs  lib.rs  main.rs  routes.rs
src/data/: filter.rs
static/: main.css
static/js/: frontend.js
templates/: index.html
